[package]
name = "tree-sitter-csv"
description = "CSV, PSV, & TSV grammar for tree-sitter"
version = "1.2.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "csv", "tsv"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-csv"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
	"common",
	"bindings/rust/*",
	"csv/grammar.js",
	"csv/src/*",
	"csv/queries/*",
	"psv/grammar.js",
	"psv/src/*",
	"psv/queries/*",
	"tsv/grammar.js",
	"tsv/src/*",
	"tsv/queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.82"
